--- a/CustomRPC/Strings.zh-Hans.resx
+++ b/CustomRPC/Strings.zh-Hans.resx
@@ -175,4 +175,7 @@
   <data name="errorSavingSettings" xml:space="preserve">
     <value>储存以下设定时发生错误：</value>
   </data>
+  <data name="errorLoadingAssembly" xml:space="preserve">
+    <value>请将路径 "{0}" 添加到防病毒软体的白名单中。如果此错误仍然存在，请重新安装 CustomRP。</value>
+  </data>
 </root>
