--- a/CustomRPC/Properties/Resources.resx
+++ b/CustomRPC/Properties/Resources.resx
@@ -127,4 +127,7 @@
   <data name="globe" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\globe.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="globe_white" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\globe_white.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
