--- a/CustomRPC/Strings.ja.resx
+++ b/CustomRPC/Strings.ja.resx
@@ -175,4 +175,7 @@
   <data name="errorSavingSettings" xml:space="preserve">
     <value>設定の保存中にエラーが発生しました:</value>
   </data>
+  <data name="errorLoadingAssembly" xml:space="preserve">
+    <value>ウイルス対策ソフトの例外設定に"{0}"を追加してください。このエラーが続くようであれば、CustomRPを再インストールしてください。</value>
+  </data>
 </root>
